# HelloWorldCITest

./: CMakeLists.txt  LICENSE  MultiCPackConfig.cmake  README.md  settings.json  vcpkg.json
.github/workflows/: cmake.yml
Hello/: CMakeLists.txt  Speaker.cpp
package/: CMakeLists.txt
