option(BUILD_SHARED_LIBS "Build shared library" OFF)

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_DEBUG_POSTFIX d)

find_package(Eigen3 3.3 REQUIRED NO_MODULE)

add_library (Hello 
  Speaker.h
  Speaker.cpp)
set_target_properties(Hello PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})

target_link_libraries(Hello
                        PRIVATE 
                        Eigen3::Eigen
                        )

include(GNUInstallDirs)

#install (TARGETS Hello COMPONENT HelloLib DESTINATION lib)

install (FILES Speaker.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT HelloLib)

install(TARGETS Hello
    COMPONENT HelloLib
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}/Release CONFIGURATIONS Release
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/Release CONFIGURATIONS Release
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/Release CONFIGURATIONS Release )

install(TARGETS Hello
    COMPONENT HelloLib
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}/Debug CONFIGURATIONS Debug
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/Debug CONFIGURATIONS Debug
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/Debug CONFIGURATIONS Debug)
